Add Shop component to each item card.

--- a/src/app/components/exchange/exchange.component.html
+++ b/src/app/components/exchange/exchange.component.html
@@ -1,6 +1,6 @@
 <div class="clr-row">
   <div class="clr-col-9">
-    <app-improvement-card [improvementType]="'production'"></app-improvement-card>
+    <!-- <app-improvement-card [improvementType]="'production'"></app-improvement-card> -->
   </div>
   <div class="clr-col-3"></div>
 </div>
