Additional styling for shop inside item card.

--- a/src/app/components/activity-button/activity-button.component.scss
+++ b/src/app/components/activity-button/activity-button.component.scss
@@ -40,6 +40,7 @@
   text-align: center;
   padding: 12px 18px;
   height: 2.2rem;
+  font-size: .7rem;
   width: -webkit-calc(100% - 2.1rem);
   width:    -moz-calc(100% - 2.1rem);
   width:         calc(100% - 2.1rem);
