--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,21 @@
+
+<div class="clr-row">
+  <div class="clr-col-lg-auto" *ngFor="let itemActivity of itemActivityMap">
+    <app-item-card [activityId]="itemActivity.activityId" [itemId]="itemActivity.itemId"></app-item-card>
+  </div>
+</div>
+
+<br /><br />
+<button type="button" (click)="controlService.save()">Save</button>
+<!-- <button type="button" (click)="controlService.load()">Load</button> -->
+<button type="button" (click)="controlService.clear()">Clear</button><br><br>
+
 <button type="button" (click)="cheat5()">5 Minutes into play</button><br>
 <button type="button" (click)="cheat20()">20 Minutes into play</button><br>
 <button type="button" (click)="setmcp(100000)">100,000 mcp</button><br>
 <button type="button" (click)="levelService.levelUp()">Level Up</button><br>
 <br>
+
 
 <!-- <input type="text" [(ngModel)]="amounts[1]">
 <button type="button" (click)="setAmount(1)">Set Rocks</button>
@@ -18,18 +31,6 @@
 <br>
 <input type="text" [(ngModel)]="amounts[8]">
 <button type="button" (click)="setAmount(8)">Set Wheat</button> -->
-
-<div class="clr-row">
-  <div class="clr-col-lg-auto" *ngFor="let itemActivity of itemActivityMap">
-    <app-item-card [activityId]="itemActivity.activityId" [itemId]="itemActivity.itemId"></app-item-card>
-  </div>
-</div>
-
-<br /><br />
-<button type="button" (click)="controlService.save()">Save</button>
-<!-- <button type="button" (click)="controlService.load()">Load</button> -->
-<button type="button" (click)="controlService.clear()">Clear</button>
-
 
 <!-- <div class="clr-row" *ngIf="itemService.allowRefiningSet()">
   <div class="clr-col-12">
