--- a/src/app/components/activity-button/activity-button.component.html
+++ b/src/app/components/activity-button/activity-button.component.html
@@ -4,8 +4,12 @@
       <div class="clr-toggle-wrapper custom-wrapper">
         <input type="checkbox" id="{{activity.id}}" (click)="toggleActivity(activity.id)" [(ngModel)]="activity.active" class="clr-toggle">
         <label class="custom-label" for="{{activity.id}}">
-          <div style="padding-right: 2.1rem">
-            <app-pulsing-text [text]="activity.name" [pulseId]="activity.pulseId+'name'"></app-pulsing-text>
+          <div class="clr-row">
+            <div class="clr-col-12" *ngIf="item && itemService.items$ | async">
+              <clr-icon attr.shape="{{item.icon}}" shape="" size="24" [ngStyle]="{'color': item.color}"></clr-icon>
+              : <app-pulsing-text [text]="item.amount" [pulseId]="item.pulseId+'amount'"></app-pulsing-text>
+              / <app-pulsing-text [text]="item.limit" [pulseId]="item.pulseId+'limit'"></app-pulsing-text>
+            </div>
           </div>
         </label>
       </div>
