--- a/src/app/components/item-card/item-card-header/item-card-header.component.html
+++ b/src/app/components/item-card/item-card-header/item-card-header.component.html
@@ -1,8 +1,5 @@
 <div class="clr-row">
   <div class="clr-col-12">
-    <app-activity-button [activityId]="activity.id"></app-activity-button>
+    <app-activity-button [activityId]="activity.id" [itemId]="itemId"></app-activity-button>
   </div>
-  <!-- <div class="clr-col-9">
-    <app-pulsing-text [text]="activity.name" [pulseId]="activity.pulseId+'name'"></app-pulsing-text>
-  </div> -->
 </div>
