--- a/src/app/components/item-card/item-card-upcoming/item-card-upcoming.component.html
+++ b/src/app/components/item-card/item-card-upcoming/item-card-upcoming.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="mcpItem.amount >= activity.mcpTriggerAmount && mcpItem.amount < activity.mcpDiscoverAmount">
     <div class="card">
       <div class="card-header">
-        <span class="opaque">Upcoming Activity</span>
+        <span class="opaque">Something New!</span>
       </div>
       <div class="card-block">
         <div class="card-text">
@@ -11,11 +11,6 @@
             @ {{utilsService.formatNumber(activity.mcpDiscoverAmount)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
           </span>
         </div>
-      </div>
-      <div class="card-footer">
-        <button class="btn btn-outline" disabled>
-          @ {{utilsService.formatNumber(activity.mcpDiscoverAmount)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-        </button>
       </div>
     </div>
   </ng-container>
