--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -12,7 +12,7 @@
       <app-layout-subnav></app-layout-subnav>
     </nav>
     <div class="content-container">
-      <div class="content-area" style="padding-bottom: 50px;">
+      <div class="content-area my-content-area">
       <div class="clr-row">
         <div class="clr-col-12">
           <app-home *ngIf="contentNav === 'home'"></app-home>
