Relable speed and git build

--- a/src/app/components/item-card/item-card-footer/item-card-footer.component.html
+++ b/src/app/components/item-card/item-card-footer/item-card-footer.component.html
@@ -1,8 +1,8 @@
 <table class="table my-table">
   <thead>
     <tr>
+      <th>Interval</th>
       <th *ngIf="activity.decrementId">Consumes</th>
-      <th>Seconds</th>
       <th colspan="2">Produces</th>
     </tr>
   </thead>
