--- a/src/app/components/layout/layout-header/layout-header.component.scss
+++ b/src/app/components/layout/layout-header/layout-header.component.scss
@@ -4,3 +4,10 @@
   align-items: center;
   justify-content: center;
 }
+
+.header-nav .nav-link:hover {
+  cursor: pointer;
+}
+.header-actions .nav-link:hover {
+  cursor: pointer;
+}
