--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,11 +9,11 @@
 <!-- <button type="button" (click)="controlService.load()">Load</button> -->
 <button type="button" (click)="controlService.clear()">Clear</button><br><br>
 
-<!-- <button type="button" (click)="cheat5()">5 Minutes into play</button><br>
+<button type="button" (click)="cheat5()">5 Minutes into play</button><br>
 <button type="button" (click)="cheat20()">20 Minutes into play</button><br>
 <button type="button" (click)="setmcp(100000)">100,000 mcp</button><br>
 <button type="button" (click)="levelService.levelUp()">Level Up</button><br>
-<br> -->
+<br>
 
 
 <!-- <input type="text" [(ngModel)]="amounts[1]">
