--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -7,7 +7,7 @@
       </div>
     </div>
   </ng-container>
-  <ng-container *ngIf="topNav === 'play'">
+  <ng-container *ngIf="topNav === 'play' && navigationService.navigations$ | async">
     <nav class="subnav my-subnav">
       <app-layout-subnav></app-layout-subnav>
     </nav>
