--- a/src/app/components/activity-slider/activity-slider.component.scss
+++ b/src/app/components/activity-slider/activity-slider.component.scss
@@ -1,8 +1,15 @@
-.slider {
-  width: 100%;
-  height: 3px;
-}
-
 .outlined {
   border-bottom: 1px solid lightgray;
+}
+
+@keyframes slider {
+  0% {
+    transform: translateX(0%)
+  }
+  95% {
+    transform: translateX(100%)
+  }
+  100% {
+    transform: translateX(0%)
+  }
 }
