--- a/src/app/components/powers/powers.component.html
+++ b/src/app/components/powers/powers.component.html
@@ -1,7 +1,7 @@
 <div class="clr-row">
-  <div class="clr-col-9">
+  <div class="clr-col-12">
     <app-powers-card [improvementType]="'powers'" [header]="'Next Level'">
-      Beef up your Demagoguery and go to the next level!
+      Beef up your Demagoduery and go to the next level!
       You will lose all:
       <ul>
         <li>Improvements from the Shop</li>
@@ -15,5 +15,4 @@
     </app-powers-card>
     <app-powers-summary-card></app-powers-summary-card>
   </div>
-  <div class="clr-col-3"></div>
 </div>
