--- a/src/app/components/layout/layout-header/layout-header-actions/layout-header-actions.component.html
+++ b/src/app/components/layout/layout-header/layout-header-actions/layout-header-actions.component.html
@@ -1,3 +1,3 @@
 <a *ngIf="topNav !== 'welcome'" class="nav-link" (click)="setContentNav(powersNav)">
-  <app-pulsing-text [pulseId]="'powers'" [text]="powersText" [initialPulse]="true"></app-pulsing-text>
+  <app-pulsing-text [pulseId]="'powers'" [text]="powersText"></app-pulsing-text>
 </a>
