--- a/src/app/components/layout/layout-header/layout-header.component.html
+++ b/src/app/components/layout/layout-header/layout-header.component.html
@@ -10,6 +10,7 @@
     <div class="header-nav" [clr-nav-level]="1">
       <a [ngClass]="{'nav-link': true, 'active': topNav === 'welcome'}" (click)="setTopNav('welcome')">Welcome</a>
       <a [ngClass]="{'nav-link': true, 'active': topNav === 'play'}" (click)="play()">Play</a>
+      <a [ngClass]="{'nav-link': true, 'active': topNav === 'carnival'}" (click)="setTopNav('carnival')" *ngIf="itemService.carnivalUnlocked()">Carnival</a>
     </div>
   </div>
   <div class="header-actions">
