--- a/src/app/components/layout/layout-subnav/layout-subnav.component.html
+++ b/src/app/components/layout/layout-subnav/layout-subnav.component.html
@@ -1,12 +1,16 @@
 <div style="width: 100%;" *ngIf="itemService.items$ | async">
-  <div style="width: 48%; float: left; text-align: center;">
+  <div style="width: 32%; float: left; text-align: center;">
     <clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color, 'margin-bottom': '6px'}"></clr-icon>
     : <app-pulsing-text [text]="mcpItem.amount" [pulseId]="mcpItem.pulseId+'amount'"></app-pulsing-text>
-    </div>
-  <div style="width: 48%; float: left; text-align: center;">
+  </div>
+  <div *ngIf="itemService.exchangeUnlocked()" style="width: 32%; float: left; text-align: center;">
+    <clr-icon attr.shape="{{moneyItem.icon}}" size="18" [ngStyle]="{'color': moneyItem.color, 'margin-bottom': '6px'}"></clr-icon>
+    : <app-pulsing-text [text]="utilsService.formatCurrency(moneyItem.amount.toFixed(2))" [pulseId]="moneyItem.pulseId+'amount'"></app-pulsing-text>
+  </div>
+  <div style="width: 32%; float: left; text-align: center;">
     <clr-icon attr.shape="{{humanItem.icon}}" size="18" [ngStyle]="{'color': humanItem.color, 'margin-bottom': '6px'}"></clr-icon>
     : <app-pulsing-text [text]="humanItem.amount" [pulseId]="humanItem.pulseId+'amount'"></app-pulsing-text>
-    </div>
+  </div>
 </div>
 
 
